--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
+__pycache__
 .vscode
 .idea/
 note.txt
+
 /server/script.ipynb
 /server/script.py
-client/.ipynb_checkpoints/
 
-*.avi
+/client/.ipynb_checkpoints/
+/client/new-notebook.ipynb
+/client/notebook.ipynb
+/client/requester.py
 
-__pycache__
